	  the high color formats and you really want bold you can change
	  %FMT<string> to %fmt%_<string>%_, it will work fine in all irssi versions.
	+ Better 005 PREFIX support (bug #580).
	+ Display 407 numerics other than "duplicate channel".
	+ Fix display of ratbox-style operspy whois.
	+ Recode outgoing irc away messages (bug #412).
	+ Remove scrollback_levelclear_levels setting and add a 'level' option
	  to 'sb levelclear' to specify a comma separated list of levels.
	+ Add perl __WARN__ handler for scripts (bug #427).
	+ Add Irssi::command_parse_options function to parse options for a command.
	+ Revert recode changes introduced in 0.8.12.
	+ Add completion for /WINDOW SERVER.
	+ Support for reading kicks/msgs from TARGMAX/MAXTARGETS 005 tokens.
	+ Enhancements to the redirections code.
	+ Support for RPL_WHOISACTUALLY (338 numeric) for both ratbox and ircu
	  (bug #428).
	+ -idle option of /notify is gone.
	+ /layout save now makes window-channel bindings instantly effective
	  (bug #35).
	+ /ping without arguments does not send anymore a ctcp ping to a channel
	  (bug #542).
	+ Track IRC operator status of nicks a bit better.
	+ new 'actlist_names' option to add active items names in 'act'
	  statusbar item.
	+ new 'word_completion_backward' command to scroll backwards in the
	  completion list.
	+ add 'list' option to /bind to print all the available commands.
	+ show setter/time in +I lists
	+ apply -usermode before -autosendcmd (bug #548).
	+ reduce memory usage of the scrollback buffer and make the display
	  in /sb status more accurate (higher).
	+ fix data getting dropped when a lot is sent at a time (e.g. when
	  attaching to irssi-proxy, bug #528).
	+ introduce the type Irssi::Irc::Client and signals to communicate with
	  proxy clients to allow for scripting parts of the irssi-proxy.
	+ Add sb_search.pl, a script for /SCROLLBACK SEARCH
	- Ignore DNS not found errors when considering reconnect.